Added resources classes
