# app/Http/Resources/EventResource.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class EventResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id'         => $this->id,
+            'user_id'    => $this->user_id,
+            'title'      => $this->title,
+            'description' => $this->description,
+            'start_time' => $this->start_time,
+            'end_time'   => $this->end_time,
+            'country'   => $this->country,
+            'capacity'   => $this->capacity,
+            'created_at' => $this->created_at->toDateTimeString(),
+        ];
+    }
+}
